--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -13,11 +13,11 @@ x-airflow-common:
     AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth'
   volumes:
-    - ./dags:/opt/airflow/dags
+    - ../dags:/opt/airflow/dags
     - ./logs:/opt/airflow/logs
-    - ./plugins:/opt/airflow/plugins
-    - ./data:/opt/airflow/data
-    - ./scripts:/opt/airflow/scripts
+    - ../plugins:/opt/airflow/plugins
+    - ../data:/opt/airflow/data
+    - ../scripts:/opt/airflow/scripts
   user: "${AIRFLOW_UID:-50000}:0"
   depends_on:
     &airflow-common-depends-on
