--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -65,7 +65,7 @@ services:
       - postgres-analytics-data:/var/lib/postgresql/data
       - ./init-scripts/postgres:/docker-entrypoint-initdb.d
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U analytics_user"]
+      test: ["CMD-SHELL", "pg_isready -U analytics_user -d analytics_db"]
       interval: 10s
       timeout: 5s
       retries: 5
